--- a/week01/favorite-city.html
+++ b/week01/favorite-city.html
@@ -10,10 +10,7 @@
 <body>
     <h1>My Favorite City</h1>
     <p>7 years ago, my family and I moved from Metro Manila to Iloilo because of work. I eventually left that job—but we
-        chose to stay here for good. </p>
-
-    <p>That’s how much we’ve grown to love this city. 💛 Iloilo has been nothing but amazing: kind people, a clean and
-        peaceful environment, and a lifestyle that just feels right.</p>
+        chose to stay here for good. That’s how much we’ve grown to love this city. 💛</p>
 
     <img src="images/iloilo-city.jpg" alt="Iloilo City">
 </body>
