--- a/index.html
+++ b/index.html
@@ -1,14 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 130 | Personal Homepage</title>
+    <title>Jeff Spencer Luna | WDD 130</title>
 </head>
-<body>
-    <h1>Welcome to WDD 130.</h1>
-    <p>This page will become your homepage for the course. You will remove this text and replace it with your own personal details.</p>
 
-    <img src="images/salt-lake-temple.jpg" alt="The Salt Lake Temple.">
+<body>
+    <header>
+        <nav>
+            <a href="#">Home</a>
+            <a href="wwr/">Rafting Website</a>
+        </nav>
+    </header>
+    <main>
+        <h1>Jeff Spencer Luna | WDD 130</h1>
+        <img src="profile.jpg" alt="Hello, my name Jeff Spencer Luna." width="200">
+        <p>Hello! My name is Jeff Spencer Luna and I am from the Philippines. I love playing basketball. </p>
+    </main>
+    <footer>
+        <p>©️ 2025 🏀 Jeff Spencer Luna 🏀 Iloilo City, Philippines </p>
+    </footer>
+
+
 </body>
+
 </html>
