edit no. 2 sync with https://spens30.github.io/wdd130/

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
     </header>
     <main>
         <h1>Jeff Spencer Luna | WDD 130</h1>
-        <img src="images/profile.jpg" alt="Hello, my name is Jeff Spencer Luna." width="200">
+        <img src="images/profile.jpg" alt="Jeff Spencer Luna." width="200">
         <p>Hello! My name is Jeff Spencer Luna and I am from the Philippines. I love playing basketball. </p>
     </main>
     <aside>
         <h2>Philippines</h2>
-        <img src="images/flag.jpg" alt="Philippines" width="100">
+        <img src="images/flag.jpg" alt="Philippine flag" width="100">
         <p>The Philippines is a vibrant archipelago of over 7,640 islands known for its rich culture, diverse languages,
             tropical
             landscapes, and resilient people. It sits in Southeast Asia, bordered by the South China Sea and the Pacific
